<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:id="@+id/name_activityEdit"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/_Surname"
        android:id="@+id/surname_activityEdit"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/card_1"
        android:id="@+id/card1_activityEdit"
        android:inputType="number"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/card_2"
        android:id="@+id/card2_activityEdit"
        android:inputType="number"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/ok_activityEdit"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/delete_activityEdit"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>