<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_sname"
            android:textSize="20sp"
            android:id="@+id/textViewName"/>
        <TextView
            android:layout_marginStart="10dp"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card1"
            android:textSize="18sp"
            android:id="@+id/textViewCard"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:focusable="false"

        android:layout_marginTop="1dp"
        android:focusableInTouchMode="false"
        android:id="@+id/btnCopy"/>

</LinearLayout>